# truth

./: .gitignore  LICENSE  Main.hs  Parse.hs  README.md  Truth.hs  truth.cabal
